style.css
*{
    margin:0;
    padding:0;
    box-sizing:border-box;
    font-family:'Poppins',sans-serif;
}

body{
    display:flex;
    justify-content:center;
    align-items:center;
    height:100vh;
}
.container{
    height:530px;
    width:350px;
    border:1px solid black;
    background: #EEF3FB;
    border: none;
    box-shadow:
    8px 8px 16px #c9d4e8,
    -8px -8px 16px #ffffff;
    border-radius:15px;

    padding:5px;

    background: var(--bg-color);
    color: var(--text-color);
    transition: background 0.3s, color 0.3s;
}

.navbar{
    display:flex;
    align-items:center;
    gap:85px;
}

/* icons styling */

.upicon svg{
    width:24px;
    height:24px;
    color:#ff6a00;
}

.upicon{
    width:28px;
    height:28px;

    display:flex;
    justify-content:center;
    align-items:center;

    background:#EEF3FB;
    border-radius:12px;

    box-shadow:
    6px 6px 12px #c9d4e8,
    -6px -6px 12px #ffffff;

    position:relative;
    left:8px;
    top:8px;
}


.location{
    font-size:11px;
}


.weather-box{
    display:flex;
    flex-direction:column;
    align-items:center;
    margin-top:40px;
}

.weather-icon{
    width:32px;
    height:32px;
    color:#2686e0;
    filter: drop-shadow(2px 4px 6px rgba(85, 190, 209, 0.877));
    position:relative;
    left:30px;
    top:10px;
    margin-bottom:-15px;
    z-index:2;
}
.temp-circle{

    width:120px;
    height:120px;

    border-radius:50%;

    background:#EEF3FB;

    display:flex;
    justify-content:center;
    align-items:center;

    box-shadow:
    10px 10px 20px #c9d4e8,
    -10px -10px 20px #ffffff;
}

.temp-circle h1{
    font-size:32px;
    color:#2f2f3a;
}

.weather-condition{
    margin-top:20px;
    
}

.divider{
    width:85%;
    height:1px;
    background:#797c83;
    margin:20px auto;
    border-radius:10px;
    
}

.details{
    width:82px;
    height:58px;

    background:#fdeede;
    border-radius:14px;
    padding:3px 4px;

    box-shadow:
    10px 10px 9px rgba(116, 55, 12, 0.1),
    -5px -5px 8px rgba(255,255,255,.95);
}


.cards{
    display:flex;
    justify-content:space-between;
    gap:20px;
    margin-top:2px;
    padding:3px 18px;
}

.title{
    display:flex;
    align-items:center;
    gap:4px;
}

.title svg{
    width:15px;
    height:15px;
    color:rgb(255, 115, 0);
}

.wind-icon{
    width:14px;
    height:14px;
}

.humidity-icon{
    width:16px;
    height:16px;
}

.visibility-icon{
    width:18px;
    height:18px;
     stroke-width:2.8;
}

.title span{
    font-size:13px;
    color:#585757;
}

.details h3{
    margin-top:7px;
    font-size:14px;
    font-weight:600;
    color:#2F2F3A;
    text-align:center;

}


/* bottom code start here */


.today{
    display:inline-block;

}

.see-more{
    display:inline-block;
    text-align:right;
}

.bottom{
    display:flex;
    justify-content:space-between;
    margin-top:10px;
}



.forecaste{
    display:flex;
    flex-direction:row;
    justify-content:space-between;
    margin:20px 10px;
    text-align:center;

}

.box1{
    height:85px;
    width:68px;
    border:1px solid black;
    border-radius:12px;
    padding:8px 3px;
    font-size:13px;
    box-shadow:
    10px 10px 9px rgba(116, 55, 12, 0.1),
    -5px -5px 8px rgba(255,255,255,.95);
    border:none;
    background:#def1ff;
  
}

.box{
    height:98px;
    width:65px;
    border:1px solid black;
    border-radius:12px;
    padding:15px 4px;
    font-size:14px;
    box-shadow:
    10px 10px 9px rgba(116, 55, 12, 0.1),
    -5px -5px 8px rgba(255,255,255,.95);
    border:none;
    background:#fdeede;
    

}

.box1 svg{
    color:rgb(255, 115, 0);
}

.box svg{
    color:rgb(33, 141, 224);
}



/* dark mode css */


body.dark-mode{
    background:#121212;
}

body.dark-mode .upicon{

    background:#2A2D3E;

    box-shadow:
    5px 5px 10px rgba(0,0,0,.45),
    -5px -5px 10px rgba(255,255,255,.04);

}

body.dark-mode .container{
    background:#232338;

    box-shadow:
    10px 10px 20px rgba(0,0,0,.45),
    -10px -10px 20px rgba(255,255,255,.03);
}

body.dark-mode .details{
  background:#2A2D3E;

    box-shadow:
    6px 6px 12px rgba(0,0,0,.45),
    -6px -6px 12px rgba(255,255,255,.04);
}

body.dark-mode .temp-circle{
    background:#34374A;

    box-shadow:
    8px 8px 18px rgba(0,0,0,.45),
    -8px -8px 18px rgba(255,255,255,.04);
}

body.dark-mode .box1{

    background:#2A2D3E;

    box-shadow:
    5px 5px 10px rgba(0,0,0,.45),
    -5px -5px 10px rgba(255,255,255,.04);

}

body.dark-mode .box{

    background:#2A2D3E;

    box-shadow:
    5px 5px 10px rgba(0,0,0,.45),
    -5px -5px 10px rgba(255,255,255,.04);

}

body.dark-mode h1,
body.dark-mode h2,
body.dark-mode h3,
body.dark-mode h4,
body.dark-mode i,
body.dark-mode p,
body.dark-mode span{
    color:#F5F5F5;
}


body,
.container,
.details,
.temp-circle,
.upicon,
.hour-card,
.divider{
    transition:0.35s ease;
}


.details:hover{
    transform:translateY(-3px);
}

.upicon{
    cursor:pointer;
}

